--- a/lab4/task2/online-store/src/app/components/product-list/product-list.html
+++ b/lab4/task2/online-store/src/app/components/product-list/product-list.html
@@ -1,5 +1,9 @@
-<div class="grid">
-  @for (p of products; track trackById($index, p)) {
-    <app-product-card [product]="p"></app-product-card>
-  }
-</div>
+@if (products.length === 0) {
+  <p>No products in this category.</p>
+} @else {
+  <div class="grid">
+    @for (p of products; track p.id) {
+      <app-product-item [product]="p" (delete)="deleteProduct($event)"></app-product-item>
+    }
+  </div>
+}
