--- a/lab4/task2/online-store/src/app/components/product-list/product-list.html
+++ b/lab4/task2/online-store/src/app/components/product-list/product-list.html
@@ -1,9 +1,15 @@
-@if (products.length === 0) {
-  <p>No products in this category.</p>
-} @else {
-  <div class="grid">
-    @for (p of products; track p.id) {
-      <app-product-item [product]="p" (delete)="deleteProduct($event)"></app-product-item>
-    }
+<div class="product-list-container">
+  <h2 class="category-title">{{ categoryName }}</h2>
+
+  <p *ngIf="products.length === 0" class="empty-message">
+    😕 В этой категории нет товаров.
+  </p>
+
+  <div class="product-grid">
+    <app-product-item
+      *ngFor="let product of products"
+      [product]="product"
+      (deleteProduct)="onDeleteProduct($event)">
+    </app-product-item>
   </div>
-}
+</div>
